fix(core): revert word-break/overflow-wrap swaps (#4344)

--- a/app/scripts/modules/amazon/src/serverGroup/details/scalingPolicy/scalingPolicySummary.component.less
+++ b/app/scripts/modules/amazon/src/serverGroup/details/scalingPolicy/scalingPolicySummary.component.less
@@ -1,6 +1,6 @@
 scaling-policy-summary {
   .alarm-name {
-    overflow-wrap: break-word;
+    word-break: break-all;
   }
   .actions {
     font-size: 85%;
