--- a/app/scripts/modules/core/src/cluster/rollups.less
+++ b/app/scripts/modules/core/src/cluster/rollups.less
@@ -66,7 +66,7 @@
 table.instances {
   table-layout: fixed;
   td {
-    overflow-wrap: break-word;
+    word-break: break-all;
   }
 }
 
