--- a/app/scripts/modules/core/src/pipeline/config/preconditions/preconditionList.directive.less
+++ b/app/scripts/modules/core/src/pipeline/config/preconditions/preconditionList.directive.less
@@ -1,5 +1,5 @@
 td.precondition-details {
-  overflow-wrap: break-word;
+  word-break: break-all;
 }
 
 th.precondition-details {
