--- a/app/scripts/modules/core/src/presentation/details.less
+++ b/app/scripts/modules/core/src/presentation/details.less
@@ -100,7 +100,7 @@
     padding: 20px 15px 0 15px;
     margin-bottom: 10px;
     .header-text {
-      overflow-wrap: break-word;
+      word-break: break-all;
       padding: 15px 0;
       display: table;
       .copy-to-clipboard .glyphicon {
