--- a/app/scripts/modules/core/src/presentation/main.less
+++ b/app/scripts/modules/core/src/presentation/main.less
@@ -1334,7 +1334,7 @@ ul.checkmap {
 }
 
 .break-word {
-  overflow-wrap: break-word;
+  word-break: break-all;
 }
 
 .horizontal-rule {
