--- a/app/scripts/modules/core/src/search/searchResult/baseTable.less
+++ b/app/scripts/modules/core/src/search/searchResult/baseTable.less
@@ -6,7 +6,7 @@
     width: auto;
     overflow-x: auto;
     white-space: nowrap;
-    overflow-wrap: break-word;
+    word-break: break-all;
     .table-header {
       position: sticky;
       top: 0;
@@ -31,7 +31,7 @@
         padding: 10px;
         display: inline-block;
         width: 150px;
-        overflow-wrap: break-word;
+        word-break: break-all;
         white-space: normal;
         border-bottom: 1px solid var(--color-alto);
       }
